--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,8 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry exported="true" kind="lib" path="libs/gdx.jar" sourcepath="libs/gdx-sources.jar"/>
+	<classpathentry kind="lib" path="libs/Swarm.jar"/>
+	<classpathentry kind="lib" path="libs"/>
+	<classpathentry exported="true" kind="lib" path="/CheapestShootingGame-android/assets/bloom.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
